[gd_scene load_steps=2 format=3 uid="uid://er3q3k511rr8"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_qx6xr"]

[node name="Main Menu" type="CanvasLayer"]
script = ExtResource("1_qx6xr")

[node name="MenuBackground" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_right = 42.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 96
text = "Game Title
"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -49.0
offset_right = 71.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 44
text = "Start
"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
